// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack should render a horizontal stack 1`] = `
<DocumentFragment>
  .emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

.emotion-3 {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 1.25rem;
}

<div
    class="emotion-5"
  >
    <div
      class="emotion-4"
      display="flex"
    >
      <div
        class="emotion-1"
      >
        <article
          class="emotion-0"
        >
          Card one
        </article>
      </div>
      <div
        class="emotion-3"
      >
        <article
          class="emotion-0"
        >
          Card two
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render a responsive stack 1`] = `
<DocumentFragment>
  .emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

.emotion-3 {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media screen and (min-width:25rem) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width:64rem) {
  .emotion-4 {
    display: flex;
  }
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 1.25rem;
  margin-bottom: 0;
}

@media screen and (min-width:25rem) {
  .emotion-1 {
    margin-right: 0;
    margin-bottom: 1.25rem;
  }
}

@media screen and (min-width:64rem) {
  .emotion-1 {
    margin-right: 1.25rem;
    margin-bottom: 0;
  }
}

<div
    class="emotion-5"
  >
    <div
      class="emotion-4"
      display="flex,block,flex"
    >
      <div
        class="emotion-1"
      >
        <article
          class="emotion-0"
        >
          Card one
        </article>
      </div>
      <div
        class="emotion-3"
      >
        <article
          class="emotion-0"
        >
          Card two
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render a vertical stack 1`] = `
<DocumentFragment>
  .emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-4 {
  box-sizing: border-box;
  display: block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  margin-bottom: 1.25rem;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

.emotion-3 {
  box-sizing: border-box;
}

<div
    class="emotion-5"
  >
    <div
      class="emotion-4"
      display="block"
    >
      <div
        class="emotion-1"
      >
        <article
          class="emotion-0"
        >
          Card one
        </article>
      </div>
      <div
        class="emotion-3"
      >
        <article
          class="emotion-0"
        >
          Card two
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
